Fixing text alignment, positions

--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@
 			<div class="page-content">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--6-col">
-						<canvas id="0canvas" width=600 height=600 style="display:none; float:right"></canvas>
+                        <div id="weloveking"> </div>
 					</div>
-					<div id="weloveking">
-						เรา
-					</div>
+					
 					<div class="mdl-cell mdl-cell--6-col">
 						<h1 class="font-title">กรอกชื่อของคุณ</h1>
 						<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
